[package]
name = "ogg"
version = "0.7.0"
authors = ["est31 <MTest31@outlook.com>"]
description = "Ogg container decoder and encoder written in pure Rust"
license = "BSD-3-Clause"
keywords = ["ogg", "decoder", "encoder", "xiph"]
documentation = "https://docs.rs/ogg/0.7.0"
repository = "https://github.com/RustAudio/ogg"
readme = "README.md"

[lib]
name = "ogg"

[dependencies]
byteorder = "1.0"
tokio = { version = "0.2", optional = true }
tokio-util = { version = "0.3", features = ["codec"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.3"

[features]
async = ["tokio", "tokio-util", "futures", "bytes"]
